--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
-      <title>ZHO SUN</title>
-      <link rel="stylesheet" href="./css/stylesheet.css">
-      <link rel="shortcut icon" href="./favicon.ico">
-      <meta charset="utf-8">
-    </head>
-	<script src="./js/getimage.js"></script>
-    <body>
-		Hello        
-    </body>
-</html> 
+  <head>
+    <title>ZHO SUN</title>
+    <link rel="stylesheet" href="./css/stylesheet.css" />
+    <link rel="shortcut icon" href="./favicon.ico" />
+    <meta charset="utf-8" />
+  </head>
+  <script type="text/javascript" src="config.js"></script>
+  <script src="./js/getimage.js"></script>
+  <script src="./js/settext.js"></script>
+  <body>
+    Hello
+  </body>
+</html>
