--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <link rel="stylesheet" href="./css/stylesheet.css" />
     <link rel="shortcut icon" href="./favicon.ico" />
     <meta charset="utf-8" />
+    <script type="text/javascript" src="config.js"></script>
   </head>
-  <script type="text/javascript" src="config.js"></script>
-  <script src="./js/getimage.js"></script>
-  <script src="./js/settext.js"></script>
-  <body>
+  <body id="background">
     Hello
   </body>
+
+  <script src="./js/getimage.js"></script>
+  <script src="./js/settext.js"></script>
 </html>
