--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ZHO SUN</title>
+    <title id="title"></title>
     <link rel="stylesheet" href="./css/stylesheet.css" />
     <link rel="shortcut icon" href="./favicon.ico" />
     <meta charset="utf-8" />
     <script type="text/javascript" src="config.js"></script>
   </head>
   <body id="background">
-    Hello
+    <div id="greeting"></div>
   </body>
-
   <script src="./js/getimage.js"></script>
   <script src="./js/settext.js"></script>
 </html>
