--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
     <script type="text/javascript" src="config.js"></script>
   </head>
   <body id="background">
-    <div id="greeting"></div>
+    <div
+      style="
+        display: grid;
+        grid-template-columns: repeat(5, minmax(0, 1fr));
+        height: 100%;
+      "
+    >
+      <div id="greeting" style="grid-column: span 4 / span 4; color:white"></div>
+      <div
+        style="
+          grid-column: span 1 / span 1;
+          background-color: #00000069;
+          width: 100%;
+          height: 100%;
+          border-radius: 10%;
+        "
+      ></div>
+    </div>
   </body>
   <script src="./js/getimage.js"></script>
   <script src="./js/settext.js"></script>
