--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
   </head>
   <body id="background">
     <div
-      style="
-        display: grid;
-        grid-template-columns: repeat(5, minmax(0, 1fr));
-        height: 100%;
-      "
+      style="display: grid; grid-template-columns: repeat(5, minmax(0, 1fr))"
     >
-      <div id="greeting" style="grid-column: span 4 / span 4; color:white"></div>
+      <div
+        id="greeting"
+        style="grid-column: span 4 / span 4; color: white"
+      ></div>
       <div
         style="
           grid-column: span 1 / span 1;
           background-color: #00000069;
           width: 100%;
-          height: 100%;
+          height: 200px;
           border-radius: 10%;
         "
-      ></div>
+      >
+        <div id="time"></div>
+      </div>
     </div>
   </body>
   <script src="./js/getimage.js"></script>
