fix: hee hee hee haw

--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
           width: 100%;
           height: 200px;
           border-radius: 10%;
+          padding: 32px;
         "
       >
-        <div id="time"></div>
+        <div id="time" style="font-size: 60px; color: rgb(99, 99, 99)"></div>
+        <div id="date" style="font-size: 20px; color: rgb(99, 99, 99)"></div>
       </div>
     </div>
   </body>
