--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
         style="
           grid-column: span 1 / span 1;
           background-color: #00000069;
-          width: 100%;
-          height: 200px;
-          border-radius: 10%;
+          border-radius: 2vw;
           padding: 32px;
         "
       >
