--- a/index.html
+++ b/index.html
@@ -9,24 +9,56 @@
   </head>
   <body id="background">
     <div
-      style="display: grid; grid-template-columns: repeat(5, minmax(0, 1fr))"
+      style="
+        display: flex;
+        flex-direction: row;
+        padding-left: 4vw;
+        padding-top: 4vh;
+      "
     >
-      <div
-        id="greeting"
-        style="grid-column: span 4 / span 4; color: white"
-      ></div>
-      <div
-        style="
-          grid-column: span 1 / span 1;
-          background-color: #00000069;
-          width: 100%;
-          height: 200px;
-          border-radius: 10%;
-          padding: 32px;
-        "
-      >
-        <div id="time" style="font-size: 60px; color: rgb(99, 99, 99)"></div>
-        <div id="date" style="font-size: 20px; color: rgb(99, 99, 99)"></div>
+      <div style="flex-basis: auto">
+        <div
+          style="
+            inline-size: 100%;
+            margin-bottom: 1vw;
+            display: flex;
+            flex-direction: row;
+          "
+        >
+          <div
+            style="
+              flex-basis: auto;
+              background-color: #0000004b;
+              padding: 32px;
+              border-radius: 2vw;
+            "
+          >
+            <div
+              id="time"
+              style="font-size: 60px; color: rgb(131, 131, 131)"
+            ></div>
+            <div
+              id="date"
+              style="font-size: 20px; color: rgb(131, 131, 131)"
+            ></div>
+          </div>
+        </div>
+
+        <div
+          style="background-color: #0000004b; border-radius: 2vw; padding: 32px"
+        >
+          <div
+            id="quote"
+            style="
+              font-size: 40px;
+              color: rgb(131, 131, 131);
+              font-family: 'Dancing Script', cursive;
+              inline-size: 20vw;
+              overflow-wrap: break-word;
+              white-space: pre-line;
+            "
+          ></div>
+        </div>
       </div>
     </div>
   </body>
