--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <title id="title"></title>
     <link rel="stylesheet" href="./css/stylesheet.css" />
-    <link rel="shortcut icon" href="./favicon.ico" />
     <meta charset="utf-8" />
     <script type="text/javascript" src="config.js"></script>
   </head>
@@ -14,6 +13,7 @@
         flex-direction: row;
         padding-left: 4vw;
         padding-top: 4vh;
+        column-gap: 4vw;
       "
     >
       <div style="flex-basis: auto">
@@ -43,7 +43,6 @@
             ></div>
           </div>
         </div>
-
         <div
           style="background-color: #0000004b; border-radius: 2vw; padding: 32px"
         >
@@ -59,6 +58,16 @@
             "
           ></div>
         </div>
+      </div>
+      <div
+        style="
+          flex-basis: auto;
+          background-color: #0000004b;
+          padding: 32px;
+          border-radius: 2vw;
+        "
+      >
+        <img id="lmao" src=""></img>
       </div>
     </div>
   </body>
