--- a/index.html
+++ b/index.html
@@ -60,15 +60,13 @@
         </div>
       </div>
       <div
+        id="links"
         style="
           flex-basis: auto;
-          background-color: #0000004b;
-          padding: 32px;
-          border-radius: 2vw;
+          display: grid;
+          grid-template-columns: repeat(4, minmax(0, 1fr));
         "
-      >
-        <img id="lmao" src=""></img>
-      </div>
+      ></div>
     </div>
   </body>
   <script src="./js/getimage.js"></script>
