--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
           flex-basis: auto;
           display: grid;
           grid-template-columns: repeat(4, minmax(0, 1fr));
+          column-gap: 20px;
+          row-gap: 20px;
         "
       ></div>
     </div>
