links function as links now lmao

--- a/index.html
+++ b/index.html
@@ -73,4 +73,5 @@
   </body>
   <script src="./js/getimage.js"></script>
   <script src="./js/settext.js"></script>
+  <script src="./js/imagetabs.js"></script>
 </html>
