fix: padding on quotes and time

--- a/index.html
+++ b/index.html
@@ -22,25 +22,11 @@
               ></div>
             </div>
           </div>
-          <div
-            style="
-              background-color: #0000004b;
-              border-radius: 2vw;
-              padding: 32px;
-              display: block;
-            "
-            id="quotecontainer"
-          >
-            <!-- font-family: 'Dancing Script', cursive; -->
+          <div style="margin-top: 1vw"></div>
+          <div id="quotecontainer">
             <div id="quotebox">
-              <div
-                id="quote"
-                style="font-family: 'Amiri', serif; font-style: italic"
-              ></div>
-              <div
-                id="quoteauthor"
-                style="text-align: end; font-family: 'Amiri', serif"
-              ></div>
+              <div id="quote" style="font-style: italic"></div>
+              <div id="quoteauthor" style="text-align: end"></div>
             </div>
           </div>
         </div>
@@ -50,10 +36,7 @@
               <button class="dropbtn"></button>
               <div class="dropdown-content"></div>
             </div>
-            <form
-              id="searchForm"
-              style="flex-basis: auto; flex-grow: 1; height: 100%"
-            ></form>
+            <form id="searchForm"></form>
           </div>
           <div style="margin-top: 40px"></div>
           <div id="links"></div>
