fix: image tabs grow with screen size

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <button class="dropbtn"></button>
               <div class="dropdown-content"></div>
             </div>
-            <form id="searchForm" style="width:40vw"></form>
+            <form id="searchForm" style="flex-grow: 1"></form>
           </div>
           <div style="margin-top: 40px"></div>
           <div id="links"></div>
