--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             <div id="sideflexitem">
               <div
                 id="time"
-                style="font-size: 60px; color: rgb(131, 131, 131)"
+                style="font-size: 10vmin; color: rgb(131, 131, 131)"
               ></div>
               <div
                 id="date"
-                style="font-size: 20px; color: rgb(131, 131, 131)"
+                style="font-size: 4vmin; color: rgb(131, 131, 131)"
               ></div>
             </div>
           </div>
-          <div style="margin-top: 1vw"></div>
+          <div style="margin-top: 6vh"></div>
           <div id="quotecontainer">
             <div id="quotebox">
               <div id="quote" style="font-style: italic"></div>
