feat: made an optional to do list

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
               <div id="quoteauthor" style="text-align: end"></div>
             </div>
           </div>
+          <div id="todocontainer">
+            <div style="color: rgb(131, 131, 131); font-size: 32px">To do:</div>
+            <textarea type="text" id="todo"></textarea>
+          </div>
         </div>
         <div>
           <div id="customsearch">
@@ -49,4 +53,5 @@
   <script src="./js/imagetabs.js"></script>
   <script src="./js/customsearch.js"></script>
   <script src="./js/configparse.js"></script>
+  <script src="./js/todo.js"></script>
 </html>
